# basic_robot

./: README.md  doxyfile
assets/: CMakeLists.txt  package.xml
assets/config/: basic_robot.urdf  basic_robot_estimate.urdf  viewer.rviz
assets/maps/: map.yaml
basic_robot/: CMakeLists.txt  package.xml
basic_robot/include/basic_robot/: basic_robot.h  basic_robot_types.h
basic_robot/include/system/: kinematics.h
basic_robot/msg/: Mode.msg
basic_robot/src/system/: kinematics.cpp
basic_robot/srv/: SetMode.srv
controllers/front_steering_command_controller/: CMakeLists.txt  front_steering_command_plugin.xml  package.xml
controllers/front_steering_command_controller/include/front_steering_command_controller/: front_steering_command_controller.h
controllers/front_steering_command_controller/src/: front_steering_command_controller.cpp
controllers/front_steering_state_controller/: CMakeLists.txt  front_steering_state_plugin.xml  package.xml
controllers/front_steering_state_controller/include/front_steering_state_controller/: front_steering_state_controller.h
controllers/front_steering_state_controller/src/: front_steering_state_controller.cpp
controllers/rear_drive_command_controller/: CMakeLists.txt  package.xml  rear_drive_command_plugin.xml
controllers/rear_drive_command_controller/include/rear_drive_command_controller/: rear_drive_command_controller.h
controllers/rear_drive_command_controller/src/: rear_drive_command_controller.cpp
controllers/rear_drive_controller/: CMakeLists.txt  package.xml  plugin.xml
controllers/rear_drive_controller/include/rear_drive_controller/: rear_drive_controller.h
controllers/rear_drive_controller/src/: rear_drive_controller.cpp
controllers/rear_drive_state_controller/: CMakeLists.txt  package.xml  rear_drive_state_plugin.xml
docs/: basic__robot_8h.html  basic__robot_8h__dep__incl.map  basic__robot_8h__dep__incl.md5  basic__robot_8h__incl.map  basic__robot_8h__incl.md5  basic__robot__base_8h.html  basic__robot__base_8h__dep__incl.map  basic__robot__base_8h__dep__incl.md5  basic__robot__hw_8h.html  basic__robot__hw_8h__incl.map  basic__robot__sim_8h.html  basic__robot__sim_8h__incl.map  basic__robot__sim_8h_source.html  basic__robot__types_8h__dep__incl.md5  classBasicRobotBase-members.html  classBasicRobotBase__inherit__graph.md5  classBasicRobotHW.html  classBasicRobotHW__inherit__graph.md5  classBasicRobotSim.html  classFrontSteeringHW__inherit__graph.md5  classFrontSteeringSim-members.html  classFrontSteeringSim__coll__graph.md5  classKinematics-members.html  classMap.html  classMotionControl.html  classRearDriveHW__coll__graph.md5  classRearDriveHW__inherit__graph.map  classRearDriveHW__inherit__graph.md5  classRearDriveSim.html  classRearDriveSim__coll__graph.md5  classRearDriveSim__inherit__graph.md5  classSimulation-members.html  classfront__steering__command__controller_1_1FrontSteeringCommandController-members.html  classfront__steering__command__controller_1_1FrontSteeringCommandController.html  classfront__steering__command__controller_1_1FrontSteeringCommandController__coll__graph.md5  classfront__steering__state__controller_1_1FrontSteeringStateController-members.html  classhardware__interface_1_1FrontSteeringCommandHandle.html  classhardware__interface_1_1FrontSteeringStateHandle__inherit__graph.md5  classhardware__interface_1_1FrontSteeringStateInterface__coll__graph.md5  classhardware__interface_1_1RearDriveCommandHandle-members.html  (+180 more)
drivers/motor_driver/: CMakeLists.txt  package.xml
drivers/motor_driver/config/: parameters.yaml
drivers/motor_driver/include/motor_driver/: motor_driver_hw_interface.h  motor_driver_interface.h  motor_driver_sim_interface.h
drivers/motor_driver/launch/: motor_driver.launch
drivers/motor_driver/src/: motor_driver_hw_interface.cpp  motor_driver_interface.cpp  motor_driver_sim_interface.cpp  motor_hw_main.cpp  motor_sim_main.cpp
hardware_interfaces/front_steering_state_interface/: CMakeLists.txt  package.xml
hardware_interfaces/front_steering_state_interface/include/front_steering_state_interface/: front_steering_state_interface.h
hardware_interfaces/rear_drive_command_interface/: CMakeLists.txt  package.xml
hardware_interfaces/rear_drive_command_interface/include/rear_drive_command_interface/: rear_drive_command_interface.h
hardware_interfaces/rear_drive_interface/: CMakeLists.txt  package.xml
hardware_interfaces/rear_drive_interface/include/rear_drive_interface/: rear_drive_interface.h
hardware_interfaces/rear_drive_state_interface/: CMakeLists.txt  package.xml
hardware_interfaces/rear_drive_state_interface/include/rear_drive_state_interface/: rear_drive_state_interface.h
motion_control/: CMakeLists.txt  package.xml
motion_control/config/: parameters.yaml
motion_control/include/motion_control/: basic_robot_base.h  basic_robot_hw.h  basic_robot_sim.h  front_steering_hw.h  motion_control.h  rear_drive_hw.h
motion_control/include/motion_control/hw/: front_steering_hw.h  rear_drive_hw.h
motion_control/include/motion_control/sim/: basic_robot_sim.h  front_steering_sim.h  rear_drive_sim.h
motion_control/launch/: motion_control_hw.launch  motion_control_sim.launch
motion_control/src/: basic_robot_base.cpp  basic_robot_hw.cpp  basic_robot_sim.cpp  front_steering_hw.cpp  motion_control.cpp  motion_control_hw_main.cpp  motion_control_main.cpp  motion_control_sim_main.cpp  rear_drive_hw.cpp
motion_control/src/hw/: basic_robot_hw.cpp  front_steering_hw.cpp  rear_drive_hw.cpp
motion_control/src/sim/: basic_robot_sim.cpp  front_steering_sim.cpp  rear_drive_sim.cpp
planner/: CMakeLists.txt  package.xml  plugins.xml
planner/config/: parameters.yaml
planner/include/planner/: manual_planner.h  planner.h  planner_base.h
planner/src/: manual_planner.cpp  planner.cpp  planner_main.cpp
simulation/: CMakeLists.txt  package.xml
simulation/config/: parameters.yaml
simulation/include/simulation/: kinematics.h  map.h  simulation.h
simulation/launch/: sim.launch
simulation/src/: kinematics.cpp  map.cpp  simulation.cpp
(+720 files in other folders)
