<?xml version="1.0"?>
<package format="2">
  <name>assets</name>
  <version>0.0.0</version>
  <description>The assets package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
