<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description>The motion_control package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>basic_robot</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>motor_driver</build_depend>
  <build_depend>front_steering_state_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>basic_robot</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>motor_driver</build_export_depend>
  <build_export_depend>front_steering_state_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>basic_robot</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>motor_driver</exec_depend>
  <exec_depend>front_steering_state_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
