<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>basic_robot</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>basic_robot</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>basic_robot</exec_depend>
  <export>
  </export>
</package>
