<?xml version="1.0"?>
<package format="2">
  <name>front_steering_state_controller</name>
  <version>0.0.0</version>
  <description>The front_steering_state_controller package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>basic_robot</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>front_steering_state_interface</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>basic_robot</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>front_steering_state_interface</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>basic_robot</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>front_steering_state_intertface</exec_depend>
  <export>
    <controller_interface plugin="${prefix}/front_steering_state_plugin.xml"/>
  </export>
</package>
