<?xml version="1.0"?>
<package format="2">
  <name>motor_driver</name>
  <version>0.0.0</version>
  <description>The motor_driver package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>basic_robot</build_depend>
  <build_depend>rear_drive_controller</build_depend>
  <build_depend>rear_drive_command_interface</build_depend>
  <build_depend>rear_drive_state_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>basic_robot</build_export_depend>
  <build_export_depend>rear_drive_controller</build_export_depend>
  <build_export_depend>rear_drive_command_interface</build_export_depend>
  <build_export_depend>rear_drive_state_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>basic_robot</exec_depend>
  <exec_depend>rear_drive_controller</exec_depend>
  <exec_depend>rear_drive_command_interface</exec_depend>
  <exec_depend>rear_drive_state_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
