<?xml version="1.0"?>
<package format="2">
  <name>front_steering_state_interface</name>
  <version>0.0.0</version>
  <description>The front_steering_state_interface package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
